fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ height: 100%;
   display: block;
   width: 90%;
   text-align: center;
-  margin: 75px auto -25px;
+  margin: 75px auto -10px;
 }
 .squirrel-logo {
   position: absolute;
